# BattleShipGame

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  deps.py  main.py  utils.py
backend/app/api/: analyze.py  games.py  leaderboard.py  stats.py  users.py
backend/app/coach/: archetypes.py  chain.py  prompts.py
backend/app/db/repositories/: analyses.py  games.py  users.py
backend/app/engine/: board.py  coords.py  features.py  fleet.py
backend/app/engine/bots/: __init__.py  base.py  hunt_bot.py  prob_bot.py  random_bot.py
backend/app/schemas/: coach.py  game.py  shot.py  user.py
backend/migrations/: 0001_init.sql  0002_indexes.sql  0003_leaderboard_view.sql  0004_auth.sql
backend/tests/: conftest.py  test_api_leaderboard.py  test_api_users.py  test_auth.py  test_board.py  test_deps.py  test_features.py  test_fleet.py  test_fleet_validation.py  test_hunt_bot.py  test_prob_bot.py  test_random_bot.py
docs/superpowers/plans/: 2026-05-07-auth-system.md  2026-05-07-leaderboard-and-profile.md  2026-05-07-tier0-core-game.md  2026-05-07-tier1-ai-coach.md
docs/superpowers/specs/: 2026-05-07-auth-system-design.md  2026-05-07-design-merge-design.md  2026-05-07-profile-page-design.md  2026-05-07-regional-leaderboard-design.md  (+1 more)
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/design/: _partials.html  game.html  index.html  leaderboard.html  login.html  play.html  profile.html  review.html  shared.css
(+30 files in other folders)
